dev/auth-system.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-system
spec:
  selector:
    matchLabels:
      app: auth-system
  template:
    metadata:
      labels:
        app: auth-system
    spec:
      containers:
      - name: auth-system
        image: trustartup.azurecr.io/authsystem
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: auth-system
spec:
  selector:
    app: auth-system
  ports:
  - port: 80
    targetPort: 80
