dev/business-content.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-content
spec:
  selector:
    matchLabels:
      app: business-content
  template:
    metadata:
      labels:
        app: business-content
    spec:
      containers:
      - name: business-content
        image: trustartup.azurecr.io/businesscontent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        command: ["/bin/sh", "-c"]
        args: ["php artisan migrate --force && /docker-entrypoint.sh"]
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: business-content
spec:
  selector:
    app: business-content
  ports:
  - port: 80
    targetPort: 80
