dev/business-logic.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-logic
spec:
  selector:
    matchLabels:
      app: business-logic
  template:
    metadata:
      labels:
        app: business-logic
    spec:
      containers:
      - name: business-logic
        image: trustartup.azurecr.io/businesslogic
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: business-logic
spec:
  selector:
    app: business-logic
  ports:
  - port: 80
    targetPort: 80
