dev/feed-content-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-content-db
spec:
  selector:
    matchLabels:
      app: feed-content-db
  template:
    metadata:
      labels:
        app: feed-content-db
    spec:
      containers:
      - name: feed-content-db
        image: postgres:14.1-alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: feed-content-db
spec:
  selector:
    app: feed-content-db
  ports:
  - port: 5432
    targetPort: 5432
