dev/feed-logic.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-logic
spec:
  selector:
    matchLabels:
      app: feed-logic
  template:
    metadata:
      labels:
        app: feed-logic
    spec:
      containers:
      - name: feed-logic
        image: trustartup.azurecr.io/feedlogic
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: feed-logic
spec:
  selector:
    app: feed-logic
  ports:
  - port: 80
    targetPort: 80
