dev/media-system-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-system-db
spec:
  selector:
    matchLabels:
      app: media-system-db
  template:
    metadata:
      labels:
        app: media-system-db
    spec:
      containers:
      - name: media-system-db
        image: postgres:14.1-alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: media-system-db
spec:
  selector:
    app: media-system-db
  ports:
  - port: 5432
    targetPort: 5432
