dev/payment-system.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-system
spec:
  selector:
    matchLabels:
      app: payment-system
  template:
    metadata:
      labels:
        app: payment-system
    spec:
      containers:
      - name: payment-system
        image: trustartup.azurecr.io/paymentsystem
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        command: ["/bin/sh", "-c"]
        args: ["php artisan migrate --force && php -S 0.0.0.0:80 -t public"]
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: payment-system
spec:
  selector:
    app: payment-system
  ports:
  - port: 80
    targetPort: 80
